fix sign in size on mobile

--- a/src/app/sign-in/sign-in.component.css
+++ b/src/app/sign-in/sign-in.component.css
@@ -22,7 +22,7 @@
 }
 @media (max-width: 500px) {
     .center {
-        max-width: 50%;
+        max-width: 75%;
     }
 }
 
